public/css/module.less
/*
Since the uplot default is to dark for dark mode
*/
.u-select {
    background: @gray;
    opacity: 0.2;
}

/*
We wanted to use Icinga Web's collapsible.js, however,
since we fetch content after the page is loaded the
collapsible.js event handler did not handle our content correctly.
Thus, we set the visible-height=0 so that the container is
always collapsed and we use the min-height to show a single chart.
*/
.perfdata-charts-container {
    min-height: 275px;
}

/*
These elements are used to retrive colors in the JavaScript part of the module
*/
div.axes-color {
    background-color: @gray-semilight;
}
div.warning-color {
    background-color: @color-warning;
}
div.critical-color {
    background-color: @color-critical;
}
div.value-color {
    background-color: @color-pending;
}

/*
This element is used to signal errors for line-charts
*/
p.line-chart-error {
    .rounded-corners(.25em);
    background-color: @gray-lighter;
    padding: .5em;
    overflow: hidden;
    text-overflow: ellipsis;
}

/*
The spinner for when data is being fetched
*/
i.spinner {
    animation-name: spin;
    animation-duration: 2000ms;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
}

/*
Small fix so that the active border is not cut off
*/
ul.quick-actions {
    padding: 3px;
    & > li > a:focus {
        outline: none;
    }
}

/*
Render values below charts as a proper table instead of inline floating groups.
uPlot marks legend with .u-inline by default, so we override that behavior
for this module's chart container only.
*/
.perfdatagraphs-line-chart {
    position: relative;

    .u-legend.u-inline {
        display: block;
        width: 100%;
        margin-top: .35em;
    }

    .u-legend.u-inline tbody {
        display: block;
        max-height: 50em;
        overflow-y: auto;
    }

    .u-legend.u-inline tr {
        display: table;
        width: 100%;
        table-layout: fixed;
        margin-right: 0;
        border-collapse: collapse;
    }

    .u-legend.u-inline th,
    .u-legend.u-inline td {
        display: table-cell;
        padding: .2em .4em;
        vertical-align: middle;
    }

    .u-legend.u-inline th {
        text-align: left;
    }

    .u-legend.u-inline td.u-value {
        text-align: right;
        font-variant-numeric: tabular-nums;
    }

    .u-legend .u-marker {
        margin-right: .4em;
    }

    .perfdatagraphs-hover-tooltip {
        position: absolute;
        top: 0;
        left: 0;
        max-width: 24rem;
        padding: .45em .6em;
        border: 1px solid @gray-semilight;
        .rounded-corners(.25em);
        background-color: rgba(255, 255, 255, 0.2);
        box-shadow: 0 2px 8px rgba(0, 0, 0, .12);
        opacity: 0;
        pointer-events: none;
        transform: translate(-9999px, -9999px);
        transition: opacity .08s ease-out;
        z-index: 3;
    }

    .perfdatagraphs-hover-tooltip.is-visible {
        opacity: 1;
    }

    .perfdatagraphs-hover-tooltip-time {
        font-weight: 600;
        margin-bottom: .35em;
        white-space: nowrap;
    }

    .perfdatagraphs-hover-tooltip-series {
        width: 100%;
        border-collapse: collapse;
    }

    .perfdatagraphs-hover-tooltip-series tr {
        display: table;
        width: 100%;
        table-layout: fixed;
    }

    .perfdatagraphs-hover-tooltip-series th,
    .perfdatagraphs-hover-tooltip-series td {
        padding: .12em 0;
        vertical-align: middle;
    }

    .perfdatagraphs-hover-tooltip-series th {
        text-align: left;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
    }

    .perfdatagraphs-hover-tooltip-series td.u-value {
        text-align: right;
        font-variant-numeric: tabular-nums;
        white-space: nowrap;
        padding-left: .5em;
    }
}

